Added Code to push Response Data to DOM

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <div class="panel-heading">
                 <h3 class="panel-title">Top Articles</h3>
               </div>
-              <div class="panel-body" id="resultsHere">
+              <div class="panel-body" id="wellSection">
 
             </div>
           </div>
